More clues added and 'range check' for the generated random number added

--- a/guess-a-number/mainwindow.ui
+++ b/guess-a-number/mainwindow.ui
@@ -282,7 +282,7 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>30</pointsize>
+      <pointsize>24</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
@@ -294,7 +294,7 @@
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>30</x>
